--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,13 @@ before_install:
 
 script:
   - bash test.sh
+  - bash linux04/Code/task1.sh
+  - bash linux04/Code/task2.sh
+  - bash linux04/Code/task3.sh
 
 after_script:
   - /usr/bin/shellcheck test.sh
+  - /usr/bin/shellcheck *.sh
 
 after_failure:
   - id
