--- a/.travis.yml
+++ b/.travis.yml
@@ -9,18 +9,18 @@ before_install:
     - tar --xz -xvf shellcheck-"${scversion}".linux.x86_64.tar.xz
     - sudo cp shellcheck-"${scversion}"/shellcheck /usr/bin/
     - /usr/bin/shellcheck --version
-    - wget "https://media.githubusercontent.com/media/CUCCS/linux-2019-jckling/0x04/0x04/Codes/worldcupplayerinfo.tsv" -O linux04/Code/worldcupplayerinfo.tsv
-    - wget "https://media.githubusercontent.com/media/CUCCS/linux-2019-jckling/0x04/0x04/Codes/web_log.tsv" -O linux04/Code/web_log.tsv
+    - wget "https://media.githubusercontent.com/media/CUCCS/linux-2019-jckling/0x04/0x04/Codes/worldcupplayerinfo.tsv" -O linux_04/linux04/Code/worldcupplayerinfo.tsv
+    - wget "https://media.githubusercontent.com/media/CUCCS/linux-2019-jckling/0x04/0x04/Codes/web_log.tsv" -O linux_04/linux04/Code/web_log.tsv
 
 script:
   - bash test.sh
   - bash linux04/Code/task1.sh -h
-  - bash linux04/Code/task1.sh -d Picture/ -j 50
-  - bash linux04/Code/task1.sh -d Picture/ -c 100
-  - bash linux04/Code/task1.sh -d Picture/ -w "Hello"
-  - bash linux04/Code/task1.sh -d Picture/ -p "pre"
-  - bash linux04/Code/task1.sh -d Picture/ -s "suffix"
-  - bash linux04/Code/task1.sh -d Picture/ -v
+  - bash linux04/Code/task1.sh -d linux04/Code/Picture/ -j 50
+  - bash linux04/Code/task1.sh -d linux04/Code/Picture/ -c 100
+  - bash linux04/Code/task1.sh -d linux04/Code/Picture/ -w "Hello"
+  - bash linux04/Code/task1.sh -d linux04/Code/Picture/ -p "pre"
+  - bash linux04/Code/task1.sh -d linux04/Code/Picture/ -s "suffix"
+  - bash linux04/Code/task1.sh -d linux04/Code/Picture/ -v
   - bash linux04/Code/task2.sh -h
   - bash linux04/Code/task2.sh -a
   - bash linux04/Code/task2.sh -p
